force-app/main/default/objects/Lead/fields/PipeDriveID__c.field-meta.xml
<CustomField>
    <fullName>PipeDriveID__c</fullName>
    <externalId>true</externalId>
    <label>PipeDriveID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>