force-app/main/default/objects/Lead/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Media-SSP</label>
    <type>Checkbox</type>
</CustomField>