force-app/main/default/objects/Lead/fields/Please_contact_me__c.field-meta.xml
<CustomField>
    <fullName>Please_contact_me__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Please contact me</label>
    <type>Checkbox</type>
</CustomField>