force-app/main/default/objects/Lead/fields/PXYZ_Products_Interested_In__c.field-meta.xml
<CustomField>
    <fullName>PXYZ_Products_Interested_In__c</fullName>
    <description>https://gumgum.jira.com/browse/SOP-2112</description>
    <inlineHelpText>This field is auto-populated by Hubspot based on what product is selected from the PXYZ contact form.</inlineHelpText>
    <label>PXYZ Products Interested In</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Attention Measurement &amp; Optimisation (Data Only)</fullName>
            </value>
            <value>
                <fullName>Attention Data, High Impact Creative &amp; Premium Inventory (Full-Service Activation)</fullName>
            </value>
            <value>
                <fullName>Publisher Partnerships</fullName>
            </value>
            <value>
                <fullName>Youtube Attention Measurement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>