force-app/main/default/objects/Lead/fields/Queue_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Queue_Owner_Name__c</fullName>
    <formula>Owner:Queue.QueueName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Queue Owner Name</label>
    <type>Text</type>
</CustomField>