force-app/main/default/objects/Lead/fields/Reached_MQL__c.field-meta.xml
<CustomField>
    <fullName>Reached_MQL__c</fullName>
    <formula>NOT ISBLANK(Date_Moved_to_MQL__c)</formula>
    <label>Reached MQL?</label>
    <type>Checkbox</type>
</CustomField>