force-app/main/default/objects/Lead/fields/Recent_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Recent_Conversion__c</fullName>
    <formula>IF(
CONTAINS(Recent_Conversion_from_Hubspot__c, &quot;Sports&quot;), 
RIGHT(Recent_Conversion_from_Hubspot__c, LEN(Recent_Conversion_from_Hubspot__c) - FIND(&quot;Sports&quot;, Recent_Conversion_from_Hubspot__c)+1)
, 
RIGHT(Recent_Conversion_from_Hubspot__c, LEN(Recent_Conversion_from_Hubspot__c) - FIND(&quot;:&quot;, Recent_Conversion_from_Hubspot__c))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recent Conversion</label>
    <type>Text</type>
</CustomField>