force-app/main/default/objects/Lead/fields/Recent_Conversion_from_Hubspot__c.field-meta.xml
<CustomField>
    <fullName>Recent_Conversion_from_Hubspot__c</fullName>
    <label>Recent Conversion from Hubspot</label>
    <length>255</length>
    <type>Text</type>
</CustomField>