force-app/main/default/objects/Lead/fields/Recycled_Lead_Reason__c.field-meta.xml
<CustomField>
    <fullName>Recycled_Lead_Reason__c</fullName>
    <label>Recycled Lead Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No/low budget</fullName>
            </value>
            <value>
                <fullName>Non-decision maker</fullName>
            </value>
            <value>
                <fullName>Not interested</fullName>
            </value>
            <value>
                <fullName>Not ready to buy</fullName>
            </value>
            <value>
                <fullName>Unresponsive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>