force-app/main/default/objects/Lead/fields/Rejected_Lead_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejected_Lead_Reason__c</fullName>
    <label>Rejected Lead Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bad Data/Spam</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>GumGum Employee</fullName>
            </value>
            <value>
                <fullName>Irrelevant Contact</fullName>
            </value>
            <value>
                <fullName>No Digital Advertising</fullName>
            </value>
            <value>
                <fullName>Not in Geo</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Tech Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>