force-app/main/default/objects/Lead/fields/Request_a_Demo_Yes_No__c.field-meta.xml
<CustomField>
    <fullName>Request_a_Demo_Yes_No__c</fullName>
    <description>Return the value of &quot;Request a Demo&quot; as Yes or No instead of 1 or 0</description>
    <formula>IF(Request_a_Demo__c, &quot;Yes&quot;,&quot;No&quot;)</formula>
    <label>Request a Demo Yes/No (Checkbox)</label>
    <type>Text</type>
</CustomField>