force-app/main/default/objects/Lead/fields/Requested_to_be_Contacted__c.field-meta.xml
<CustomField>
    <fullName>Requested_to_be_Contacted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is a Hubspot property. If the box is checked, it means the contact requested to be contacted in a Hubspot contact form or landing page.</description>
    <label>Requested to be Contacted</label>
    <type>Checkbox</type>
</CustomField>