force-app/main/default/objects/Lead/fields/SalesLoft1__Most_Recent_Cadence_Next_Step_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>SalesLoft1__Most_Recent_Cadence_Next_Step_Due_Date__c</fullName>
    <description>Next SalesLoft step due date.</description>
    <label>Most Recent Cadence - Next Step Due Date</label>
    <type>Date</type>
</CustomField>