force-app/main/default/objects/Lead/fields/Sansan_CI__Sansan_CompanyInfo__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__Sansan_CompanyInfo__c</fullName>
    <formula>IF ( 
ISBLANK(Sansan_CI__Sansan_CompanyId__c) , 
&apos;&apos;, 
HYPERLINK(&apos;https://ap.sansan.com/v/companies/&apos; + Sansan_CI__Sansan_CompanyId__c + &apos;/?accessType=direct&apos;, &apos;Sansan 会社詳細&apos;) 
)</formula>
    <label>Sansan 会社情報</label>
    <type>Text</type>
</CustomField>