force-app/main/default/objects/Lead/fields/Sansan_CI__Sansan_PersonInfo__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__Sansan_PersonInfo__c</fullName>
    <formula>IF ( 
ISBLANK(Sansan_CI__Sansan_PersonId__c) , 
&apos;&apos;,
HYPERLINK(&apos;https://ap.sansan.com/v/persons/&apos; + Sansan_CI__Sansan_PersonId__c + &apos;/?accessType=direct&apos;, &apos;Sansan 人物詳細&apos;)
)</formula>
    <label>Sansan 人物情報</label>
    <type>Text</type>
</CustomField>