force-app/main/default/objects/Lead/fields/Self_Attribution_Source__c.field-meta.xml
<CustomField>
    <fullName>Self_Attribution_Source__c</fullName>
    <description>Based on SOP - 2085</description>
    <inlineHelpText>This is the category that a lead’s manual input on the form field “How did you hear about us” falls into</inlineHelpText>
    <label>Self Attribution Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blog</fullName>
            </value>
            <value>
                <fullName>Bot Crawler</fullName>
            </value>
            <value>
                <fullName>Brand</fullName>
            </value>
            <value>
                <fullName>Chat GPT</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>GG Ads</fullName>
            </value>
            <value>
                <fullName>Industry</fullName>
            </value>
            <value>
                <fullName>Industry News</fullName>
            </value>
            <value>
                <fullName>Influencer Marketing Hub</fullName>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
            <value>
                <fullName>Past work</fullName>
            </value>
            <value>
                <fullName>Podcast</fullName>
            </value>
            <value>
                <fullName>Programmatic</fullName>
            </value>
            <value>
                <fullName>Site referral</fullName>
            </value>
            <value>
                <fullName>Social</fullName>
            </value>
            <value>
                <fullName>TV Ad</fullName>
            </value>
            <value>
                <fullName>Web Search</fullName>
            </value>
            <value>
                <fullName>WOM / Referral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>