force-app/main/default/objects/Lead/fields/Self_Attribution_Source_Detail__c.field-meta.xml
<CustomField>
    <fullName>Self_Attribution_Source_Detail__c</fullName>
    <description>This field is created based on the SOP - 2085</description>
    <inlineHelpText>This field is populated based on what the lead manually inputted on the form field “How did you hear about us” from a contact form on our website.</inlineHelpText>
    <label>Self Attribution Source Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>