force-app/main/default/objects/Lead/fields/Sports_Lead__c.field-meta.xml
<CustomField>
    <fullName>Sports_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sports Lead</label>
    <type>Checkbox</type>
</CustomField>