force-app/main/default/objects/Lead/fields/Sub_Region__c.field-meta.xml
<CustomField>
    <fullName>Sub_Region__c</fullName>
    <inlineHelpText>Marketing region; this is not the region naming for the account and opportunity</inlineHelpText>
    <label>Sub-Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>United States</fullName>
            </value>
            <value>
                <fullName>Canada</fullName>
            </value>
            <value>
                <fullName>LATAM</fullName>
            </value>
            <value>
                <fullName>EMEA - UK</fullName>
            </value>
            <value>
                <fullName>EMEA - Germany</fullName>
            </value>
            <value>
                <fullName>EMEA - Belgium</fullName>
            </value>
            <value>
                <fullName>EMEA - Netherlands</fullName>
            </value>
            <value>
                <fullName>EMEA - Nordics</fullName>
            </value>
            <value>
                <fullName>EMEA - France</fullName>
            </value>
            <value>
                <fullName>EMEA - Italy</fullName>
            </value>
            <value>
                <fullName>EMEA - Spain</fullName>
            </value>
            <value>
                <fullName>APAC - Japan</fullName>
            </value>
            <value>
                <fullName>APAC - New Zealand</fullName>
            </value>
            <value>
                <fullName>APAC - Australia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>