force-app/main/default/objects/Lead/fields/Temperature__c.field-meta.xml
<CustomField>
    <fullName>Temperature__c</fullName>
    <description>Hot for leads from GumGum Contact Us form, Connect with GumGum form, or Demo Request. Cold for all other leads.</description>
    <formula>IF(
   CONTAINS(Form_Type__c, &quot;GumGum Contact Us&quot;) ||
   CONTAINS(Form_Type__c, &quot;Connect with GumGum&quot;) ||
   CONTAINS(Form_Type__c, &quot;Demo Request&quot;)||
   CONTAINS(Recent_Conversion__c, &quot;GumGum Contact Us Form&quot;)||
   CONTAINS(Recent_Conversion__c, &quot;Connect with GumGum&quot;)||
   CONTAINS(Recent_Conversion__c, &quot;Demo Request&quot;)||
   Request_a_Demo__c = TRUE,
   &quot;HOT&quot;,
   &quot;COLD&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Temperature</label>
    <type>Text</type>
</CustomField>