force-app/main/default/objects/Lead/fields/Territory_Sports__c.field-meta.xml
<CustomField>
    <fullName>Territory_Sports__c</fullName>
    <label>Territory (Sports)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Territory_Sports</valueSetName>
    </valueSet>
</CustomField>