force-app/main/default/objects/Lead/fields/Verity__c.field-meta.xml
<CustomField>
    <fullName>Verity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Verity</label>
    <type>Checkbox</type>
</CustomField>