force-app/main/default/objects/Lead/fields/Vertical__c.field-meta.xml
<CustomField>
    <fullName>Vertical__c</fullName>
    <label>Vertical Industry</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Auto and Recreational Vehicles</fullName>
            </value>
            <value>
                <fullName>CPG</fullName>
            </value>
            <value>
                <fullName>Entertainment/Media</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Issues and Causes</fullName>
            </value>
            <value>
                <fullName>Life Stages</fullName>
            </value>
            <value>
                <fullName>Misc. Businesses and Industries</fullName>
            </value>
            <value>
                <fullName>Pharma</fullName>
            </value>
            <value>
                <fullName>Politics</fullName>
            </value>
            <value>
                <fullName>Music, Sports and Live Events</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Technology</fullName>
            </value>
            <value>
                <fullName>Telecommunications</fullName>
            </value>
            <value>
                <fullName>Travel and Leisure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>