force-app/main/default/objects/Lead/validationRules/First_Name_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>First_Name_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 $User.Bypass_Opportunity_Validation__c = FALSE,
 $User.ProfileId  &lt;&gt; &quot;2F00eU0000000po22&quot;,
ISBLANK( FirstName ))</errorConditionFormula>
    <errorDisplayField>FirstName</errorDisplayField>
    <errorMessage>Because we send marketing material that merges the first name, please include a first name for this lead.</errorMessage>
</ValidationRule>