force-app/main/default/objects/Lead/validationRules/Lead_Status_Recycled.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_Status_Recycled</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$User.Bypass_Opportunity_Validation__c = FALSE,
ISPICKVAL(Status,&quot;Cold Lead&quot;),
ISPICKVAL(Recycled_Lead_Reason__c,&quot;&quot;)
)</errorConditionFormula>
    <errorDisplayField>Recycled_Lead_Reason__c</errorDisplayField>
    <errorMessage>Please complete Recycled Lead Reason</errorMessage>
</ValidationRule>