force-app/main/default/objects/Lead/validationRules/Lead_Status_Unqualified.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_Status_Unqualified</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$User.Bypass_Opportunity_Validation__c = FALSE,
  ISPICKVAL(Status,&quot;Unqualified&quot;),
  ISPICKVAL(Rejected_Lead_Reason__c,&quot;&quot;),
$User.ProfileId &lt;&gt; &quot;2F00eU0000000po22&quot;
)</errorConditionFormula>
    <errorDisplayField>Rejected_Lead_Reason__c</errorDisplayField>
    <errorMessage>Please complete Rejection Lead Reason</errorMessage>
</ValidationRule>