force-app/main/default/objects/Lead/validationRules/Prevent_Lead_Source_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Lead_Source_Change</fullName>
    <active>false</active>
    <description>If a lead is synced with HubSpot, don&apos;t let users change the Lead Source (unless Lead Source was blank). Inactivated on 1/31/23 based on Slack from Andrew S.</description>
    <errorConditionFormula>NOT(ISNULL(First_Conversion_from_Hubspot__c)) &amp;&amp; 
ISCHANGED(LeadSource) &amp;&amp;
NOT(ISBLANK(PRIORVALUE(LeadSource))) &amp;&amp;
(Sports_Lead__c = False)&amp;&amp;
$User.Bypass_Opportunity_Validation__c = FALSE</errorConditionFormula>
    <errorMessage>The Lead Source can not be changed on leads synced with HubSpot</errorMessage>
</ValidationRule>