force-app/main/default/objects/Lead/listViews/All_Unconverted_Leads.listView-meta.xml
<ListView>
    <fullName>All_Unconverted_Leads</fullName>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.RECORDTYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER.ALIAS</field>
        <operation>equals</operation>
        <value>asimo</value>
    </filters>
    <label>All Leads</label>
</ListView>