force-app/main/default/objects/Lead/listViews/APAC_AIP_Agency_Brand_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>APAC_AIP_Agency_Brand_Queue_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>APAC AIP Agency/Brand Queue</label>
    <queue>APAC_AIP_Agency_Brand_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>