force-app/main/default/objects/Lead/listViews/APAC_Non_target_Countries_Publisher_Queu_Lead.listView-meta.xml
<ListView>
    <fullName>APAC_Non_target_Countries_Publisher_Queu_Lead</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.Lead</value>
    </filters>
    <label>APAC Non-target Countries Publisher Queu</label>
    <queue>APAC_Non_target_Countries_Publisher_Queu</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>