force-app/main/default/objects/Lead/listViews/Canada_Activation_Agency_Brand_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>Canada_Activation_Agency_Brand_Queue_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Canada Activation Agency/Brand Queue</label>
    <queue>Canada_Activation_Agency_Brand_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>